[package]
name = "clarinet-deployments"
version.workspace = true
edition = "2021"

[dependencies]
base64 = "0.21.3"
colored = { workspace = true }
rand = "0.8.5"
serde = "1"
serde_json = "1.0.123"
serde_derive = "1"
serde_yaml = "0.8.23"

clarity-repl = { path = "../clarity-repl", default-features = false }
clarinet-files = { path = "../clarinet-files" }
stacks-rpc-client = { path = "../stacks-rpc-client", optional = true }
clarinet-utils = { path = "../clarinet-utils", optional = true }

stacks-codec = { path = "../stacks-codec", optional = true }
reqwest = { workspace = true, optional = true }
bitcoin = { version = "0.31.2", optional = true }
bitcoincore-rpc = { version = "0.18.0", optional = true }
bitcoincore-rpc-json = { version = "0.18.0", optional = true }
base58 = { version = "0.2.0", optional = true }
libsecp256k1 = { version = "0.7.0", optional = true }

clarity = { workspace = true }

[features]
default = ["onchain"]
onchain = [
    "stacks-rpc-client",
    "bitcoin",
    "bitcoincore-rpc",
    "bitcoincore-rpc-json",
    "base58",
    "libsecp256k1",
    "clarinet-utils",
]

[lib]
name = "clarinet_deployments"
path = "src/lib.rs"
