[package]
name = "clarity-events"
version.workspace = true
edition = "2021"

[dependencies]
clarinet-files = { path = "../clarinet-files", default-features = false }
clarity-repl = { path = "../clarity-repl", default-features = false }
clap = { version = "4.4.8", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde_derive = "1"

[features]
default = ["cli"]
cli = ["clap"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "clarity_events"
path = "src/lib.rs"

[[bin]]
name = "clarity-events"
path = "src/bin.rs"
